--- a/pages/themes/beginners/MySQL_Joins/MySQL_Joins.html
+++ b/pages/themes/beginners/MySQL_Joins/MySQL_Joins.html
@@ -3,7 +3,7 @@
 <head>
     <!-- TODO: Update all constraints synntax -->
     <meta charset="utf-8">
-    <title>MySQL_Tables_Relations</title>
+    <title>MySQL_Joins</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Tables_Relations" target="_top"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Joins" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -53,7 +53,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>MySQL Tables Relations</h1></section>
+<section><h1>SQL Joins.</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -71,6 +71,18 @@
     </div>
 </section>
 
+<section><h2>What are SQL Joins</h2>
+    <dl>
+        <dt>A mechanism to combine rows from two or more tables.</dt>
+        <dt>The combination is based on a common field between the tables</dt>
+    </dl>
+</section>
+<section><h2></h2>
+
+</section>
+<section><h2></h2>
+
+</section>
 
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
     <!-- <img class="the_end" src="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg"> -->
