--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -63,7 +63,7 @@
                 <li>Alter Table</li>
             </ol>
         </li>
-        <li id="MySQL_Data_Types"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">2</span></h3>
+        <li id="MySQL_Data_Types"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Numeric Types</li>
                 <li>Date and Time Types</li>
@@ -71,24 +71,29 @@
                 <li>The ENUM Data Type</li>
             </ol>
         </li>
-        <li id="Insert_delete_update_data"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/Insert_delete_update_data/Insert_delete_update_data.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL</span><span class="hours">2</span></h3>
+        <li id="Insert_delete_update_data"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/Insert_delete_update_data/Insert_delete_update_data.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>Insert into table</li>
                 <li>Update table</li>
                 <li>Delete from table</li>
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Извличане на данни от таблици посредством команда (select) и клауза (where)</span><span class="hours">2</span></h3>
+        <li id="MySQL_Indexes"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Indexes/MySQL_Indexes.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Индекси в MySQL</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
-
+                <dt>What are Indexes and how they are stored</dt>
+                <dt>Regular INDEX</dt>
+                <dt>Fulltext Index</dt>
+                <dt>PRIMARY KEY</dt>
             </ol>
         </li>
         <li id="MySQL_Foreign_Key"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">SQL Constraints. Външен ключ (foreign key). Foreign key constraints.</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
-                <li></li>
+                <li>SQL Constraints</li>
+                <li>What is a FOREIGN KEY?</li>
+                <li>FOREIGN KEY constraints</li>
             </ol>
         </li>
-        <li id="MySQL_Tables_Relations"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Tables_Relations/MySQL_Tables_Relations.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзки между отделните таблици. </span><span class="hours">2</span></h3>
+         <li id="MySQL_Tables_Relations"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Tables_Relations/MySQL_Tables_Relations.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзки между отделните таблици. </span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>One-to-One relation</li>
                 <li>One-to-Many/Many-to-One relation</li>
@@ -100,17 +105,12 @@
 
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Използване на агрегатни функции в операторите  на MySQL</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Използване на агрегатни функции в операторите  на MySQL</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на заявки посредством операторите на езика MySQL</span><span class="hours">4</span></h3>
-            <ol class="iep_syllabus_sub_themes">
-
-            </ol>
-        </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на едновременни заявки до няколко таблици в релационната база от данни. Създаване на съединения в заявките</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nactive" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Joins/MySQL_Joins.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на едновременни заявки до няколко таблици в релационната база от данни. Създаване на съединения в заявките</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
